_mocha/korea_friendly_2026_03/gift-gacha/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: gift-gacha
  namespace: app
spec:
  selector:
    app: gift-gacha
  type: ClusterIP
  ports:
  - name: gift-gacha
    protocol: TCP
    port: 8080
    targetPort: 8080
