_mocha/korea_friendly_2026_03/gift-gacha/oneshot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  gift-gacha
  namespace: app
  labels:
    app:  gift-gacha
spec:
  selector:
    matchLabels:
      app: gift-gacha
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  gift-gacha
    spec:
      containers:
      - name:  gift-gacha
        image:  471112953209.dkr.ecr.us-east-1.amazonaws.com/gift-gacha:v1
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "10"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1
            memory: 1024Mi
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:8080/healthz || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:8080/healthz || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name:  gift-gacha          
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: gift-gacha
  namespace: app
spec:
  selector:
    app: gift-gacha
  type: ClusterIP
  ports:
  - name: gift-gacha
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gift
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: gift
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 error text"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/gacha
        pathType: Exact
        backend:
          service:
            name: gift-gacha
            port:
              number: 8080
      - path: /api/products
        pathType: Exact
        backend:
          service:
            name: gift-shop-api
            port:
              number: 8080
    
      - path: /api/orders
        pathType: Exact
        backend:
          service:
            name: gift-shop-api
            port:
              number: 8080
